Fixed style and alignment of signup button

--- a/css/index.css
+++ b/css/index.css
@@ -194,7 +194,6 @@ footer {
   padding: 10px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   color: #4c4c4c;
   background-color: rgba(249, 159, 63, 0.945);
 }
@@ -231,7 +230,7 @@ footer {
   background-color: rgba(194, 9, 89, 0.87);
   color: #fefff2;
   border-radius: 10px;
-  padding: 11px;
+  padding: 20px 0px;
   font-size: 1.5rem;
   border: none;
 }
@@ -321,17 +320,21 @@ footer {
   }
 }
 .signup {
-  padding: 50px 205px;
-  margin: 0px auto;
-  align-self: center;
-  display: inline;
+  text-align: center;
+  margin: 10px;
+}
+.signup h2 {
+  margin: 25px;
+  padding: 20px;
+  font-size: 2rem;
 }
 .signup button {
-  width: 20%;
+  width: 30%;
   background-color: rgba(194, 9, 89, 0.87);
   color: #fefff2;
   border-radius: 10px;
-  padding: 11px;
-  font-size: 1.2rem;
+  padding: 20px 0px;
+  font-size: 1.5rem;
   border: none;
+  margin: 20px auto;
 }
