--- a/less/home.less
+++ b/less/home.less
@@ -1,4 +1,5 @@
 .middle {
+
     // background-color: @background-color;
     // width: 100%;
     h2 {
@@ -16,10 +17,12 @@
     // display: flex;
     // flex-direction: column;
     width: 100%;
+
     @media @desktop {
         width: 100%;
         display: flex;
     }
+
     .middle-paragraph {
         // width: 100%;
         background-color: @red-color;
@@ -27,26 +30,23 @@
         margin: 50px 50px;
         color: @offwhite-color;
         border-radius: 20px;
-        // .signup {
-        //     padding: 50px 20px;
-        //     margin: 0px 200px; 
-        //     text-align: center;
-        // }
+
         @media @desktop {
             width: 100%;
         }
     }
 }
+
 .signup {
-    padding: 50px 205px;
-    margin: 0px auto;
-    align-self: center;
-    display: inline;
-    // text-align: center 
+    text-align: center;
+    margin: 10px;
+    h2 {
+        margin: 25px;
+        padding: 20px;
+        font-size: 2rem;
+    }
     button {
-    .custom-btn (20%, @red-color, @offwhite-color, 1.2rem);
+    .custom-btn(30%, @red-color, @offwhite-color, 1.5rem);
+    margin: 20px auto;
     }
 }
-
-
-
